@@ -12,5 +12,3 @@ necessary, and to not file crashes with flash installed
 
 apport:
  - check crashes of root processes with dropped privs in test suite
-
-#118992: need-all-retrace
