@@ -41,8 +41,9 @@ class CrashDatabase(apport.crashdb.CrashDatabase):
         hdr = {}
         if report.has_key('CoreDump') and report.has_key('PackageArchitecture'):
             a = report['PackageArchitecture']
-            hdr['Tags'] = 'apport-%s need-%s-retrace' % (
-                report['ProblemType'].lower(), a)
+            if a != 'all':
+                hdr['Tags'] = 'apport-%s need-%s-retrace' % (
+                    report['ProblemType'].lower(), a)
 
         # write MIME/Multipart version into temporary file
         mime = tempfile.TemporaryFile()
